overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1  # Dev ortamında sadece 1 replica kullan
  template:
    spec:
      containers:
        - name: my-app
          image: miraccan/servicename:dev  # Dev ortamına özel image tag'i
